# claimshield-sante

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  README.md  architecture.txt  audit.md  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/audit_agent/: README.md  agent.py  prompt.py  schemas.py
agents/autonomous_decision_agent/: agent.py  policy.py  prompt.py  schemas.py
agents/case_reviewer_agent/: README.md  agent.py  prompt.py  schemas.py
agents/claim_intake_agent/: README.md  agent.py  prompt.py  schemas.py  tools.py
agents/clinical_consistency_agent/: README.md  agent.py  prompt.py  schemas.py  tools.py
agents/document_ocr_agent/: README.md  __init__.py  agent.py  schemas.py  tools.py
agents/document_understanding_agent/: agent.py  prompt.py  schemas.py
agents/eligibility_agent/: agent.py
agents/fhir_validator_agent/: __init__.py  agent.py  schemas.py  tools.py
agents/fraud_detection_agent/: README.md  agent.py  prompt.py  schemas.py  tools.py
agents/identity_coverage_agent/: __init__.py  agent.py  schemas.py  tools.py
agents/intake_safety_agent/: agent.py  prompt.py  schemas.py
agents/medical_coding_agent/: README.md  __init__.py  agent.py  schemas.py  tools.py
agents/medical_risk_agent/: agent.py  prompt.py  schemas.py
agents/privacy_agent/: README.md  __init__.py  agent.py  schemas.py  tools.py  views.py
agents/security_gate_agent/: README.md  agent.py  prompt.py  schemas.py  tools.py
api/: __init__.py  dependencies.py  main.py  schemas.py
api/v2/: __init__.py  chat.py  claims.py  dependencies.py  (+1 more)
chat/: agent.py  answer_mode.py  audit_reader.py  conversation_store.py  correction_engine.py  explanation_engine.py  llm_usage.py  memory_schemas.py  nlu.py  planner.py  prompt.py  response_composer.py  schemas.py  semantic_summarizer.py  simulation_engine.py  tools.py
config/: __init__.py  logging.py  settings.py
database/: audit_models.py
datasets/: README.md
docs/: audit.md  data_policy.md  debug_manual_runner.md  decision_matrix.md  ecarts_architecture.md  mvp_scope.md  project_mermaid.md  quality_evaluation.md  workflow_step10.md
graph/: checkpoints.py  edges.py  edges_v2.py  input_builders.py  nodes.py  nodes_v2.py  recovery_node_v2.py  technical_nodes.py  technical_nodes_v2.py  topology.py  workflow.py  workflow_v2.py
human_review/: README.md  models.py  override_models.py  override_service.py  service.py  views.py
llm/: __init__.py  factory.py  metadata.py  prompts.py  retry.py
orchestrator/: README.md  executor.py  model_registry.py  orchestrator.py  policies.py  routing.py
prompts/: audit_agent.yaml  audit_agent_batch.yaml  autonomous_decision_agent.yaml  case_reviewer_agent.yaml  chat_intent_extraction.yaml  chat_patient_message.yaml  chat_reasoning_agent.yaml  chat_semantic_summary.yaml  claim_intake_agent.yaml  clinical_consistency_agent.yaml  document_ocr_agent.yaml  document_understanding_agent.yaml  fhir_validator_agent.yaml  fraud_detection_agent.yaml  identity_coverage_agent.yaml  intake_safety_agent.yaml  medical_coding_agent.yaml  medical_risk_agent.yaml  privacy_agent.yaml  security_gate_agent.yaml
schemas/: audit.py  domain.py  results.py  v2_results.py
scripts/: evaluate_medical_risk_fusion.py  evaluate_recommendations.py  evaluate_recommendations_v2.py  generate_demo_data.py  generate_image_fixtures.py  import_synthea_claimshield_cases.py  run_agent_manual.py
security/: __init__.py  access_policies.py  policies.py  scanners.py
services/: audit_service.py  audit_store.py  duplicate_index.py  override_store.py  privacy_service.py  storage.py
state/: README.md  claim_state.py  claim_state_v2.py
tests/: conftest.py
tools/: audit_redaction.py  confidence.py  consistency.py  contract_repository.py  coverage_rules.py  date_checks.py  document_classifier.py  document_parser.py  fhir_medical_items.py  fhir_validation.py  file_inspection.py  identity_matching.py  medical_coding.py  ocr.py  pdf_reader.py  pseudonymize.py  rule_loader.py  statistics.py  text_normalizer.py
ui/: api_client.py  api_client_v2.py  app.py  forms.py  uploads.py
(+426 files in other folders)
