[project]
name = "claimshield-sante"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fhir.resources==8.2.0",
    "pypdf>=5.0",
    "Pillow>=11.0",
    "pytesseract>=0.3.10",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "PyYAML==6.0.3",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "agents*",
    "config*",
    "graph*",
    "orchestrator*",
    "schemas*",
    "security*",
    "services*",
    "state*",
    "tools*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
    "agents",
    "graph",
    "orchestrator",
    "scripts",
    "state",
    "tools",
]
